--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     </main>
 
     <footer>
-        <p>DESENVOLVIDO POR RYAN GAY SENA</p>
+        <p>DESENVOLVIDO POR RYAN  SENA</p>
     </footer>
 </body>
 
